tests/output/self_hosted/ambiguous_union_error.txt
tests/ambiguous_union_error.oomph:16: error: wrong type: should be Outer, but it's Foo

    blah(new Foo())
         ^^^^^^^^

